# robust-llm-chain

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_KO.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_KO.md  CONTRIBUTING.md  CONTRIBUTING_KO.md  LICENSE  Makefile  README.md  README_KO.md  SECURITY.md  SECURITY_KO.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: advanced.py  builder.py  quickstart.py
src/robust_llm_chain/: __init__.py  _security.py  builder.py  chain.py  cost.py  errors.py  resolver.py  stream.py  types.py
src/robust_llm_chain/adapters/: __init__.py  anthropic.py  bedrock.py  openai.py  openrouter.py
src/robust_llm_chain/backends/: __init__.py  local.py  memcached.py
src/robust_llm_chain/observability/: __init__.py  langsmith.py
src/robust_llm_chain/testing/: __init__.py  fake_adapter.py
tests/: conftest.py  test_adapters_anthropic.py  test_adapters_bedrock.py  test_adapters_openai.py  test_adapters_openrouter.py  test_adapters_registry.py  test_builder.py  test_chain.py  test_cost.py  test_errors.py  test_fake_adapter.py  test_local_backend.py  test_memcached_backend.py  test_observability.py  test_public_api.py  test_resolver.py  test_security.py  test_stream.py  test_types.py
tests/e2e/: test_failover_real.py
tests/integration/: test_anthropic_happy.py  test_bedrock_happy.py  test_openai_happy.py  test_openrouter_happy.py
